after submission refresh page added

--- a/index.html
+++ b/index.html
@@ -834,6 +834,7 @@ Outside of the QA world, you can find me exploring new hiking trails, challengin
 
             // Reset the form
             form.reset();
+			location.reload();
         } else {
             // If form is not valid, trigger HTML5 form validation
             form.reportValidity();
