--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 						<div class="header-text">
 							<h2>hi <span>,</span> I am <br> Lav <br> Thaiba <span>.</span>   </h2>
 							<p>Founder | Ideator | Software Quality Assurance Engineer</p>
-							<a href="#contact" download>Contact me!</a>
+							<a href="#contact">Contact me!</a>
 						</div><!--/.header-text-->
 					</div><!--/.col-->
 				</div><!-- /.row-->
