--- a/index.html
+++ b/index.html
@@ -751,7 +751,7 @@ Outside of the QA world, you can find me exploring new hiking trails, challengin
 									</form><!--/form-->
 								</div><!--/.contact-form-->
 								<div id="successMessage" style="display: none;">
-									Thank you for your submission!
+									Thank you. Your form has been submitted!
 							</div>
 							</div><!--/.single-contact-box-->
 						</div><!--/.col-->
