adding meta tags

--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+		
+		
+		<meta name="description" content="Lav Thaiba's online portfolio showcasing 7+ years of experience in the Computer industry, including skills in Software QA, QC, QA, JAVA, Python, MySQL, Oracle, MSSQL, WordPress, Testing, and more.">
+		<meta name="keywords" content="Lav Thaiba, portfolio, computer industry, technical skills, communication skills, goal-focused professional, SOftware QA, QC, QA, JAVA,  MySQL, Oracle, MSSQL, WordPress, Linux, Windows, Testing, Selenium web driver, TestNG, agile methodology">
+		<meta name="author" content="Lav Thaiba">
+        <!-- Lav Thaiba Geniune information and meta tags -->
 
         <!--font-family-->
 		<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&amp;subset=devanagari,latin-ext" rel="stylesheet">
