--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&amp;subset=devanagari,latin-ext" rel="stylesheet">
         
         <!-- title of site -->
-        <title>Lav Thaiba | Online Portfolio</title>
+        <title>Lav Thaiba | Founder | Software QA | Software Quality Assurance Engineer | Tester |Online Research Geek | Online Portfolio</title>
 
         <!-- For favicon png -->
 		<link rel="shortcut icon" type="image/icon" href="assets/logo/favicon.png"/>
