--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@ Outside of the QA world, you can find me exploring new hiking trails, challengin
 						<div class="col-md-offset-1 col-md-5 col-sm-6">
 							<div class="single-contact-box">
 								<div class="contact-form">
-										<form id="myForm" action="send_email.php" method="post">
+										<form id="myForm" action="https://formspree.io/f/xayrvdpl" method="post">
 
 										<div class="row">
 											<div class="col-sm-6 col-xs-12">
