background image with opacity.2 added to experience section

--- a/index.html
+++ b/index.html
@@ -400,6 +400,8 @@ Outside of the QA world, you can find me exploring new hiking trails, challengin
 
 		<!--experience start -->
 		<section id="experience" class="experience">
+		<div id="expbg">
+		
 			<div class="section-heading text-center">
 				<h2>experience</h2>
 			</div>
@@ -567,7 +569,7 @@ Outside of the QA world, you can find me exploring new hiking trails, challengin
 						</div><!--.main-timeline-->
 					</div><!--.experience-content-->
 			</div>
-
+			</div>
 		</section><!--/.experience-->
 		<!--experience end -->
 
