position typo fixing

--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@ Outside of the QA world, you can find me exploring new hiking trails, challengin
 														<span><i class="fa fa-circle" aria-hidden="true"></i></span>
 														2015 - 2016
 													</h2>
-													<h3>Braindigit IT Solution</h3>
+													<h3>Associate Software Test Engineer</h3>
 												</div><!--/.experience-time-->
 											</div><!--/.col-->
 										</div>
