--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@ Outside of the QA world, you can find me exploring new hiking trails, challengin
 						<div class="col-md-offset-1 col-md-5 col-sm-6">
 							<div class="single-contact-box">
 								<div class="contact-form">
-										<form id="myForm" action="send_email.php" method="post" name="form">
+										<form id="myForm" action="/send_email.php" method="post" name="form">
 
 										<div class="row">
 											<div class="col-sm-6 col-xs-12">
