resetting form after form submit

--- a/index.html
+++ b/index.html
@@ -865,10 +865,10 @@ Outside of the QA world, you can find me exploring new hiking trails, challengin
             document.getElementById("successMessage").style.display = "block";
 
             // Reset the form
-           // form.reset();
-			setTimeout(function(){
-			location.reload();
-			}, 3000);
+            form.reset();
+			//setTimeout(function(){
+			//location.reload();
+			//}, 3000);
 			
         } else {
             // If form is not valid, trigger HTML5 form validation
