form submission data fixes

--- a/index.html
+++ b/index.html
@@ -866,9 +866,9 @@ Outside of the QA world, you can find me exploring new hiking trails, challengin
 
             // Reset the form
             //form.reset();
-			setTimeout(function(){
-			location.reload();
-			}, 5000);
+			//setTimeout(function(){
+			//location.reload();
+			//}, 5000);
 			
 			
         } else {
