--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 		
 		
-		<meta name="description" content="Lav Thaiba's online portfolio showcasing 7+ years of experience in the Computer industry, including skills in Software QA, QC, QA, JAVA, Python, MySQL, Oracle, MSSQL, WordPress, Testing, and more.">
+		<meta name="description" content="Lav Thaiba's online portfolio showcasing 8+ years of experience in Software QA industry, including skills in Software QA, QC, QA, JAVA, MySQL, Oracle, MSSQL, WordPress, Testing, and more.">
 		<meta name="keywords" content="Lav Thaiba, portfolio, computer industry, technical skills, communication skills, goal-focused professional, SOftware QA, QC, QA, JAVA,  MySQL, Oracle, MSSQL, WordPress, Linux, Windows, Testing, Selenium web driver, TestNG, agile methodology">
 		<meta name="author" content="Lav Thaiba">
         <!-- Lav Thaiba Geniune information and meta tags -->
@@ -130,7 +130,7 @@
 						<div class="col-sm-6">
 							<div class="single-about-txt">
 								<h3>
-								I'm passionate about ensuring quality in the world of technology. With over 7 years of experience in the computer industry, I've become a seasoned expert in the art of Quality Assurance (QA).
+								I'm passionate about ensuring quality in the world of technology. With over 8 years of experience in the computer industry, I've become a seasoned expert in the art of Quality Assurance (QA).
 								</h3>
 								<p>
 								From meticulously crafting test plans to diving deep into automation frameworks, I thrive on the challenges that come with ensuring that every product meets the highest standards. My journey in QA has taken me from the trenches of manual testing to the cutting-edge realm of automation, where I've honed my skills in Selenium WebDriver, TestNG, and Agile methodologies.
