--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 		<meta name="author" content="Lav Thaiba">
         <!-- Lav Thaiba Geniune information and meta tags -->
 
-		  <!-- Open Graph Meta Tags -->
+		<!-- Open Graph Meta Tags -->
 		<meta property="og:title" content="Lav Thaiba | Founder | Software QA | Software Quality Assurance Engineer | Tester | Online Research Geek | Online Portfolio">
 		<meta property="og:description" content="Lav Thaiba's online portfolio showcasing 8+ years of experience in Software QA industry, including skills in Software QA, QC, QA, JAVA, MySQL, Oracle, MSSQL, WordPress, Testing, and more.">
-		<meta property="og:image" content="../images/about/lt-home.jpg"> <!-- Replace with the actual path to your preview image -->
+		<meta property="og:image" content="https://lavthaiba.com.np/assets/images/about/lt-home.jpg"> <!-- Replace with the actual path to your preview image -->
 		<meta property="og:url" content="https://lavthaiba.com.np">
 		<meta property="og:type" content="website">
 
@@ -24,7 +24,7 @@
 		<meta name="twitter:card" content="summary_large_image">
 		<meta name="twitter:title" content="Lav Thaiba | Founder | Software QA | Software Quality Assurance Engineer | Tester | Online Research Geek | Online Portfolio">
 		<meta name="twitter:description" content="Lav Thaiba's online portfolio showcasing 8+ years of experience in Software QA industry, including skills in Software QA, QC, QA, JAVA, MySQL, Oracle, MSSQL, WordPress, Testing, and more.">
-		<meta name="twitter:image" content="../images/about/home.jpg"> <!-- Replace with the actual path to your preview image -->
+		<meta name="twitter:image" content="https://lavthaiba.com.np/assets/images/about/home.jpg"> <!-- Replace with the actual path to your preview image -->
 		<meta name="twitter:url" content="https://lavthaiba.com.np">
 		<meta name="twitter:site" content="@lavthaiba"> <!-- Your Twitter handle -->
 										
