adding gtag script

--- a/index.html
+++ b/index.html
@@ -969,6 +969,17 @@ Outside of the QA world, you can find me exploring new hiking trails, challengin
         
         <!--Custom JS-->
         <script src="assets/js/custom.js"></script>
+		
+		<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MQW7DFR2LT"></script>
+
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-MQW7DFR2LT');
+</script>
         
     </body>
 	
