--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 								I'm passionate about ensuring quality in the world of technology. With over 8 years of experience in the computer industry, I've become a seasoned expert in the art of Quality Assurance (QA).
 								</h3>
 								<p>
-								From meticulously crafting test plans to diving deep into automation frameworks, I thrive on the challenges that come with ensuring that every product meets the highest standards. My journey in QA has taken me from the trenches of manual testing to the cutting-edge realm of automation, where I've honed my skills in Selenium WebDriver, TestNG, and Agile methodologies.
+								From carefully crafting test plans to diving deep into automation frameworks, I thrive on the challenges that come with ensuring that every product meets the highest standards. My journey in QA has taken me from the trenches of manual testing to the cutting-edge realm of automation, where I've honed my skills in Selenium WebDriver, TestNG, and Agile methodologies.
 
 But QA isn't just about finding bugs—it's about being a champion for the user experience. That's why I'm committed to not only identifying issues but also advocating for solutions that enhance usability and functionality. Whether it's performing security testing or fine-tuning regression tests, I'm always striving to deliver products that exceed expectations.
 
