adding certificate nav

--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
 			                    <li class=" smooth-menu"><a href="#education">education</a></li>
 			                    <li class="smooth-menu"><a href="#skills">skills</a></li>
 			                    <li class="smooth-menu"><a href="#experience">experience</a></li>
-			                    <li class="smooth-menu"><a href="#profiles">profile</a></li>
-			                    
+								<li class="smooth-menu"><a href="#portfolio">certifications</a></li>
+			                    <li class="smooth-menu"><a href="#profiles">profile</a></li>			                    
 			                    <li class="smooth-menu"><a href="#contact">contact</a></li>
 			                </ul><!--/.nav -->
 			            </div><!-- /.navbar-collapse -->
