adding more quotes

--- a/index.html
+++ b/index.html
@@ -990,14 +990,41 @@ Outside of the QA world, you can find me exploring new hiking trails, challengin
 
 	var randomContent = [
 		"Quality is never an accident; it is always the result of intelligent effort. - John Ruskin",
-        "In the world of Internet Customer Service, it’s important to remember your competitor is only one mouse click away. - Doug Warner",
-        "Every time we launch a feature, people yell at us. - Angelo Sotira",
-        "The bitterness of poor quality remains long after the sweetness of low price is forgotten. - Benjamin Franklin",
-        "It's not at all important to get it right the first time. It's vitally important to get it right the last time. - Andrew Hunt and David Thomas",
-        "Software testing is a sport like hunting, it's bughunting. - Amit Kalantri",
-        "There are always better designs; the role of testing is to find them. - Thomas Gilb",
-        "The goal is to minimize the harm done to users while creating and releasing software that delivers value. - Lisa Crispin and Janet Gregory"
-		
+    "In the world of Internet Customer Service, it’s important to remember your competitor is only one mouse click away. - Doug Warner",
+    "Every time we launch a feature, people yell at us. - Angelo Sotira",
+    "The bitterness of poor quality remains long after the sweetness of low price is forgotten. - Benjamin Franklin",
+    "It's not at all important to get it right the first time. It's vitally important to get it right the last time. - Andrew Hunt and David Thomas",
+    "Software testing is a sport like hunting, it's bughunting. - Amit Kalantri",
+    "There are always better designs; the role of testing is to find them. - Thomas Gilb",
+    "The goal is to minimize the harm done to users while creating and releasing software that delivers value. - Lisa Crispin and Janet Gregory",
+    "Testing is the process of trying to break the code. - Anonymous",
+    "Testing leads to failure, and failure leads to understanding. - Burt Rutan",
+    "If debugging is the process of removing software bugs, then programming must be the process of putting them in. - Edsger Dijkstra",
+    "Good code is its own best documentation. As you’re about to add a comment, ask yourself, ‘How can I improve the code so that this comment isn’t needed?’ - Steve McConnell",
+    "Testing can only prove the presence of bugs, not their absence. - Edsger Dijkstra",
+    "A good test is one that has a high probability of breaking the code if there is a problem. - Michael Bolton",
+    "Testing is the art of finding a black box and making it sing. - James Bach",
+    "Debugging is twice as hard as writing the code in the first place. Therefore, if you write the code as cleverly as possible, you are, by definition, not smart enough to debug it. - Brian W. Kernighan",
+    "Testing is the process of evaluating a system or its component(s) with the intent to find whether it satisfies the specified requirements or not. - Anonymous",
+    "The only real mistake is the one from which we learn nothing. - John Powell",
+    "Quality means doing it right when no one is looking. - Henry Ford",
+    "Quality is free, but it's not a gift. - Phil Crosby",
+    "Quality is not an act, it is a habit. The measure of intelligence is the ability to change. - Albert Einstein",
+    "Quality is the best business plan. - John Lasseter",
+    "Quality is the result of a carefully constructed cultural environment. It has to be the fabric of the organization, not part of the fabric. - Phil Crosby",
+    "Quality is not having to apologize. - Sheldon Kopp",
+    "Quality is the best business plan. - Phil Crosby",
+    "Quality is the result of an intelligent effort, not a chance happening. - Nassim Nicholas Taleb",
+    "A good tester is a skeptical tester. - James Bach",
+    "The role of a tester is to break the software. - Michael Hunter",
+    "A tester is only as good as the test cases they can think of. - Cem Kaner",
+    "The goal of a tester is not to find bugs, it's to validate that the software meets the requirements. - Rex Black",
+    "A good tester is a detective, not a robot. - Jonathon Wright",
+    "Testing is like a game of chess, you have to think ahead of the developer. - Huib Schoots",
+    "A tester's job is to ask the questions that the user would ask, not the ones the developer expects. - Michael Bolton",
+    "A tester is a translator between the developer and the customer. - James Whittaker",
+    "The best tester is one who can put themselves in the customer's shoes. - Greta James",
+    "A good tester is the one who can find the needle in the haystack. - Neil Thompson"
 	];
 
 	function displayRandomContent() {
