--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
 		<!--welcome-hero end -->
 
 		<!--about start -->
-		<section id="about" class="about">
+		<section >
 			<div class="section-heading text-center">
-				<h2>about me</h2>
+				<h2 id="about" class="about">about me</h2>
 			</div>
 			<div class="container">
 				<div class="about-content">
