--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 		<!--welcome-hero end -->
 
 		<!--about start -->
-		<section >
+		<section id="about" class="about">
 			<div class="section-heading text-center">
 				<h2 id="about" class="about">about me</h2>
 			</div>
