adding trialsewa as new product - as experience

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 			            <!-- Collect the nav links, forms, and other content for toggling -->
 			            <div class="collapse navbar-collapse menu-ui-design" id="navbar-menu">
 			                <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
-			                <li class=" smooth-menu active"></li>
+			                <li class="smooth-menu active"></li>
 								<li class=" smooth-menu"><a href="#about">about</a></li>
 			                    <li class=" smooth-menu"><a href="#education">education</a></li>
 			                    <li class="smooth-menu"><a href="#skills">skills</a></li>
@@ -464,7 +464,7 @@ Outside of the QA world, you can find me exploring new hiking trails, challengin
 														</h4>
 														<h5>Kathmandu, Nepal</h5>
 														<p class="description">
-															At Cabtm Nepal Pvt. Ltd., I embarked on an exciting journey as the Founder and QA Lead, driving innovation in the realm of on-demand ride-sharing services. Leading a passionate team, I played a pivotal role in shaping the Cabtm Passenger and Cabtm Cabtain mobile apps, bringing the convenience of fare bargaining ride-hailing to major cities in Nepal. From late-night brainstorming sessions to celebrating milestones, my time at Cabtm was a testament to the power of teamwork and perseverance in creating impactful tech solutions that revolutionize the way people commute.													</div><!--/.timeline-content-->
+															At Cabtm Nepal Pvt. Ltd., I embarked on an exciting journey as the Founder and QA Lead, driving innovation in the realm of on-demand ride-sharing services. Leading a passionate team, I played a pivotal role in shaping the Cabtm Passenger and Cabtm Cabtain Mobile apps, bringing the convenience of fare bargaining ride-hailing to major cities in Nepal. From late-night brainstorming sessions to celebrating milestones, my time at Cabtm was a testament to the power of teamwork and perseverance in creating impactful tech solutions that revolutionize the way people commute. I have also envision and exectue Cabtm's new product - Trialsewa.													</div><!--/.timeline-content-->
 												</div><!--/.timeline-->
 											</div><!--/.col-->
 										</div>
