--- a/index.html
+++ b/index.html
@@ -589,11 +589,11 @@ Outside of the QA world, you can find me exploring new hiking trails, challengin
 													<div class="timeline-content">
 														<h4 class="title">
 															<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-															<a href ="http://www.deerwalk.com/" target="_blank" style="color:#0060c7;">Deerwalk Inc </a><span style="text-transform:capitalize; font-style:italic; color:#636a82; font-size:0.7em;">(Acquired by Ceder Gate Technologies)</span>
+															<a href ="http://www.deerwalk.com/" target="_blank" style="color:#0060c7;">Deerwalk Inc </a><span style="text-transform:capitalize; font-style:italic; color:#636a82; font-size:0.7em;">(Acquired by Cedar Gate Technologies)</span>
 														</h4>
 														<h5>Kathmandu, Nepal</h5>
 														<p class="description">
-														    My journey at Deerwalk Inc. <i>(currently acquired by <a href="https://www.cedargate.com/" target=_blank" style="color:#0060c7;">Ceder Gate Technologies</a>)</i> was a thrilling adventure in the world of IT, where I served as an Associate Software QA Engineer. It was a dynamic environment where innovation and collaboration thrived. From developing automated test scripts to executing system testing using JMeter, every day presented new challenges that kept me on my toes. Being part of projects like Hospital Analytics and Deerwalk ARMS not only deepened my technical expertise but also taught me the importance of teamwork and perseverance in delivering top-notch solutions. My time at Deerwalk was filled with growth, camaraderie, and a shared passion for pushing boundaries in software testing.
+														    My journey at Deerwalk Inc. <i>(currently acquired by <a href="https://www.cedargate.com/" target=_blank" style="color:#0060c7;">Cedar Gate Technologies</a>)</i> was a thrilling adventure in the world of IT, where I served as an Associate Software QA Engineer. It was a dynamic environment where innovation and collaboration thrived. From developing automated test scripts to executing system testing using JMeter, every day presented new challenges that kept me on my toes. Being part of projects like Hospital Analytics and Deerwalk ARMS not only deepened my technical expertise but also taught me the importance of teamwork and perseverance in delivering top-notch solutions. My time at Deerwalk was filled with growth, camaraderie, and a shared passion for pushing boundaries in software testing.
 														</p>
 													</div><!--/.timeline-content-->
 												</div><!--/.timeline-->
