--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 		
 		
 		<meta name="description" content="Lav Thaiba's online portfolio showcasing 8+ years of experience in Software QA industry, including skills in Software QA, QC, QA, JAVA, MySQL, Oracle, MSSQL, WordPress, Testing, and more.">
-		<meta name="keywords" content="Lav Thaiba, portfolio, computer industry, technical skills, communication skills, goal-focused professional, SOftware QA, QC, QA, JAVA,  MySQL, Oracle, MSSQL, WordPress, Linux, Windows, Testing, Selenium web driver, TestNG, agile methodology">
+		<meta name="keywords" content="Lav Thaiba, portfolio, computer industry, technical skills, communication skills, goal-focused professional, Software QA, QC, QA, JAVA,  MySQL, Oracle, MSSQL, WordPress, Linux, Windows, Testing, Selenium web driver, TestNG, agile methodology, trialsewa, cabtm, yeslabdesignstudio">
 		<meta name="author" content="Lav Thaiba">
         <!-- Lav Thaiba Geniune information and meta tags -->
 
 		<!-- Open Graph Meta Tags -->
-		<meta property="og:title" content="Lav Thaiba | Founder | Software QA | Software Quality Assurance Engineer | Tester | Online Research Geek | Online Portfolio">
+		<meta property="og:title" content="Lav Thaiba | Founder | Software QA | Ideator | Tester | Tech Enthusiastic | QA Instructor">
 		<meta property="og:description" content="Lav Thaiba's online portfolio showcasing 8+ years of experience in Software QA industry, including skills in Software QA, QC, QA, JAVA, MySQL, Oracle, MSSQL, WordPress, Testing, and more.">
 		<meta property="og:image" content="https://lavthaiba.com.np/assets/images/about/lt-home.jpg"> <!-- Replace with the actual path to your preview image -->
 		<meta property="og:url" content="https://lavthaiba.com.np">
@@ -32,7 +32,7 @@
 
 		<!-- Twitter Card Meta Tags -->
 		<meta name="twitter:card" content="summary_large_image">
-		<meta name="twitter:title" content="Lav Thaiba | Founder | Software QA | Software Quality Assurance Engineer | Tester | Online Research Geek | Online Portfolio">
+		<meta name="twitter:title" content="Lav Thaiba | Founder | Software QA | Ideator | Tester | Tech Enthusiastic | QA Instructor">
 		<meta name="twitter:description" content="Lav Thaiba's online portfolio showcasing 8+ years of experience in Software QA industry, including skills in Software QA, QC, QA, JAVA, MySQL, Oracle, MSSQL, WordPress, Testing, and more.">
 		<meta name="twitter:image" content="https://lavthaiba.com.np/assets/images/about/home.jpg"> <!-- Replace with the actual path to your preview image -->
 		<meta name="twitter:url" content="https://lavthaiba.com.np">
@@ -44,7 +44,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&amp;subset=devanagari,latin-ext" rel="stylesheet">
         
         <!-- title of site -->
-        <title>Lav Thaiba | Founder | Software QA | Ideator | Tester | Tech Enthusiastic | Online Portfolio</title>
+        <title>Lav Thaiba | Founder | Software QA | Ideator | Tester | Tech Enthusiastic | QA Instructor</title>
 
         <!-- For favicon png -->
 		<link rel="shortcut icon" type="image/icon" href="assets/logo/favicon.png"/>
