--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 				<div class="row">
 					<div class="col-md-12 text-center">
 						<div class="header-text">
-							<h2>Hi <span>,</span> I am <br> Lav <br> Thaiba <span>.</span>   </h2>
+							<h2>Hello <span>,</span> I am <br> Lav <br> Thaiba <span>.</span>   </h2>
 							<p>Founder | Ideator | Software QA Engineer | QA Instructor</p>
 							<a href="#contact">Let's Talk</a>
 						</div><!--/.header-text-->
