--- a/index.html
+++ b/index.html
@@ -108,7 +108,9 @@
 			                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
 			                    <i class="fa fa-bars"></i>
 			                </button>
-			                <a class="navbar-brand" href="index.html">lavthaiba.com.np &nbsp;<i class="fa fa-check"></i></a>
+							<a class="logo" href="index.html"><img src="assets/images/about/logo.png" alt="lav-logo"></a>
+
+			                <!--<a class="navbar-brand" href="index.html">lavthaiba.com.np &nbsp;<i class="fa fa-check"></i></a>-->
 			            </div><!--/.navbar-header-->
 			            <!-- End Header Navigation -->
 
