--- a/index.html
+++ b/index.html
@@ -458,20 +458,20 @@ Outside of the QA world, you can find me exploring new hiking trails, challengin
 												<div class="experience-time">
 													<h2>
 														<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-														2014 - Present
+														2023 - Present
 													</h2>
-													<h3>Founder | Ideator | Technical Assistance</h3>
+													<h3>Software QA Instructor</h3>
 												</div><!--/.experience-time-->
 											</div><!--/.col-->
 											<div class="col-md-5">
 												<div class="timeline">
 													<div class="timeline-content text-right">
 														<h4 class="title">
-														<a href ="https://trialsewa.com" target="_blank" style="color:#0060c7;">Trialsewa</a>
+														<a href ="https://skillshikshya.com" target="_blank" style="color:#0060c7;">Skillshikshya</a>
 														</h4>
 														<h5>Kathmandu, Nepal</h5>
 														<p class="description">
-															As the Founder and Ideator of TRIALSEWA, I spearheaded the creation of an innovative platform that streamlines the booking process for vehicle trials in Nepal. I developed the concept and led the platform's design and development, allowing users to book trial slots for cars, bikes, and scooters through an easy-to-use online interface. By collaborating with multiple trial centers, TRIALSEWA provides a unique service that eliminates the need for offline bookings, creating a seamless experience for users. The platform aims to revolutionize how people prepare for driving tests and access trial centers, offering convenience and affordability.
+															Delivering comprehensive QA training through a 2-3 month diploma course, blending foundational concepts with advanced techniques such as Selenium automation, API testing, and performance testing. Providing hands-on mentorship, I ensure students gain practical experience in Agile processes, SDLC/STLC, and bug lifecycle management to excel in real-world testing environments.
 														</p>
 													</div><!--/.timeline-content-->
 												</div><!--/.timeline-->
@@ -480,9 +480,9 @@ Outside of the QA world, you can find me exploring new hiking trails, challengin
 												<div class="experience-time">
 													<h2>
 														<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-														2024 - Present
+														2023 - Present
 													</h2>
-													<h3>Founder | Ideator | Technical Assistance</h3>
+													<h3>Software QA Instructor</h3>
 												</div><!--/.experience-time-->
 											</div><!--/.col-->
 										</div>
@@ -526,7 +526,7 @@ Outside of the QA world, you can find me exploring new hiking trails, challengin
 														<span><i class="fa fa-circle" aria-hidden="true"></i></span>
 														2019 - 2021
 													</h2>
-													<h3>CEO | QA Lead</h3>
+													<h3>Technical Support | QA Lead</h3>
 												</div><!--/.experience-time-->
 											</div><!--/.col-->
 											<div class="col-md-5">
@@ -548,7 +548,7 @@ Outside of the QA world, you can find me exploring new hiking trails, challengin
 														<span><i class="fa fa-circle" aria-hidden="true"></i></span>
 														2019 - current
 													</h2>
-													<h3>CEO | QA Lead</h3>
+													<h3>Technical Support | QA Lead</h3>
 												</div><!--/.experience-time-->
 											</div><!--/.col-->
 										</div>
