--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <!-- Lav Thaiba Geniune information and meta tags -->
 
 		<!-- Open Graph Meta Tags -->
-		<meta property="og:title" content="Lav Thaiba | Founder | Software QA | Ideator | Tester | Tech Enthusiastic | QA Instructor">
+		<meta property="og:title" content="Lav Thaiba | Founder | Sr. Software QA | Ideator | Tester | Tech Enthusiastic | QA Instructor">
 		<meta property="og:description" content="Lav Thaiba's online portfolio showcasing 8+ years of experience in Software QA industry, including skills in Software QA, QC, QA, JAVA, MySQL, Oracle, MSSQL, WordPress, Testing, and more.">
 		<meta property="og:image" content="https://lavthaiba.com.np/assets/images/about/lt-home.jpg"> <!-- Replace with the actual path to your preview image -->
 		<meta property="og:url" content="https://lavthaiba.com.np">
@@ -32,7 +32,7 @@
 
 		<!-- Twitter Card Meta Tags -->
 		<meta name="twitter:card" content="summary_large_image">
-		<meta name="twitter:title" content="Lav Thaiba | Founder | Software QA | Ideator | Tester | Tech Enthusiastic | QA Instructor">
+		<meta name="twitter:title" content="Lav Thaiba | Founder | Sr. Software QA | Ideator | Tester | Tech Enthusiastic | QA Instructor">
 		<meta name="twitter:description" content="Lav Thaiba's online portfolio showcasing 8+ years of experience in Software QA industry, including skills in Software QA, QC, QA, JAVA, MySQL, Oracle, MSSQL, WordPress, Testing, and more.">
 		<meta name="twitter:image" content="https://lavthaiba.com.np/assets/images/about/home.jpg"> <!-- Replace with the actual path to your preview image -->
 		<meta name="twitter:url" content="https://lavthaiba.com.np">
@@ -44,7 +44,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&amp;subset=devanagari,latin-ext" rel="stylesheet">
         
         <!-- title of site -->
-        <title>Lav Thaiba | Founder | Software QA | Ideator | Tester | Tech Enthusiastic | QA Instructor</title>
+        <title>Lav Thaiba | Founder | Sr. Software QA | Ideator | Tester | Tech Enthusiastic | QA Instructor</title>
 
         <!-- For favicon png -->
 		<link rel="shortcut icon" type="image/icon" href="assets/logo/favicon.png"/>
@@ -144,7 +144,7 @@
 					<div class="col-md-12 text-center">
 						<div class="header-text">
 							<h2>Hello <span>,</span> I am <br> Lav <br> Thaiba <span>.</span>   </h2>
-							<p>Founder | Ideator | Software QA Engineer | QA Instructor</p>
+							<p>Founder | Ideator | Sr. Software QA Engineer | QA Instructor</p>
 							<a href="#contact">Let's Talk</a>
 						</div><!--/.header-text-->
 					</div><!--/.col-->
@@ -922,7 +922,7 @@ Outside of the QA world, you can find me exploring new hiking trails, challengin
 								<div class="contact-adress">
 									<div class="contact-add-head">
 										<h3>Get In Touch</h3>
-										<p>Founder | Ideator | Software QA Engineer</p>
+										<p>Sr. Software Quality Engineer</p>
 									</div>
 									<div class="contact-add-info">
 										<div class="single-contact-add-info">
